--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "./node_modules/.bin/forever index.js"
+    "start": "./node_modules/.bin/forever --spinSleepTime 1000 index.js"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
